# timy-timmer

./: .gitignore  404.html  index.html  pyproject.toml  timer.py
search/: search_index.json
