[tool.poetry]
name = "timy"
version = "0.1.0"
description = "A jose's timing tool for timy (his productive version)!"
authors = ["jose <jose.s.contacto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tinydb = "^4.8.2"
click = "^8.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
