[tool.poetry]
name = "timy"
version = "0.1.0"
description = "A jose's timing tool for timy (his productive version)!"
authors = ["jose <jose.s.contacto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tinydb = "^4.8.2"
click = "^8.1.8"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.50"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
